--- a/Monetrix/Views/AppUser/Details.cshtml
+++ b/Monetrix/Views/AppUser/Details.cshtml
@@ -12,6 +12,9 @@
 
         <div class="card-body">
             <dl class="row">
+                <dt class="col-sm-4">Is Active</dt>
+                <dd class="col-sm-8">@Model.IsActive</dd>
+
                 <dt class="col-sm-4">Full Name</dt>
                 <dd class="col-sm-8">@Model.FullName</dd>
 
