--- a/Monetrix/Views/AppUser/Create.cshtml
+++ b/Monetrix/Views/AppUser/Create.cshtml
@@ -18,6 +18,14 @@
                 <div class="row g-3">
 
                     <div class="col-md-6">
+                        <div class="form-check">
+                            <input asp-for="IsActive" class="form-check-input" />
+                            <label asp-for="IsActive" class="form-check-label"></label>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-6">
                         <label asp-for="FullName" class="form-label"></label>
                         <input asp-for="FullName" class="form-control" />
                     </div>
