--- a/Monetrix/Views/AppUser/Edit.cshtml
+++ b/Monetrix/Views/AppUser/Edit.cshtml
@@ -16,6 +16,15 @@
                 <div asp-validation-summary="All" class="text-danger mb-3"></div>
 
                 <div class="row g-3">
+
+                    <div class="col-md-6">
+                        <div class="form-check">
+                            <input asp-for="IsActive" class="form-check-input" />
+                            <label asp-for="IsActive" class="form-check-label"></label>
+                        </div>
+                    </div>
+
+
                     <div class="col-md-6">
                         <label asp-for="FullName" class="form-label"></label>
                         <input asp-for="FullName" class="form-control" />
