--- a/Monetrix/Views/AppUser/Index.cshtml
+++ b/Monetrix/Views/AppUser/Index.cshtml
@@ -3,22 +3,39 @@
     ViewData["Title"] = "Employees";
 }
 
+@if (Model != null && Model.Any())
+{
+
 <form method="get" asp-action="Index" class="mb-3 d-flex gap-2">
     <input type="text" name="FullName" value="@ViewData["FullName"]" class="form-control" placeholder="Search by name or Email" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
-@if (Model.Any())
-{
+
     <table>
         <thead>
             <tr>
-                <th><label asp-for="@Model.First().FullName"></label></th>
-                <th><label asp-for="@Model.First().NationalId"></label></th>
-                <th><label asp-for="@Model.First().Email"></label></th>
-                <th><label asp-for="@Model.First().Position"></label></th>
-                <th><label asp-for="@Model.First().Salary"></label></th>
-                <th><label asp-for="@Model.First().HireDate"></label></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.IsActive)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NationalId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Position)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Salary)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.HireDate)
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -26,6 +43,9 @@
             @foreach (var user in Model)
             {
                 <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => user.IsActive)
+                    </td>
                     <td>@user.FullName</td>
                     <td>@user.NationalId</td>
                     <td>@user.Email</td>
@@ -52,9 +72,11 @@
 }
 else
 {
-    <div class="alert alert-warning">No employees found.</div>
-}
+    <div class="d-flex justify-content-center align-items-center" style="height: 60vh;">
+        <p class="gold-outline-text" style="font-size: 2rem; font-weight: bold; color: white;">No employees found</p>
+    </div>
 
+}
 <p class="btn-container">
     <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Employee</a>
 </p>
