--- a/Monetrix/Views/Transaction/Index.cshtml
+++ b/Monetrix/Views/Transaction/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+@if (Model != null && Model.Any()){
 <table>
     <thead>
         <tr>
@@ -64,4 +64,11 @@
         </tr>
 }
     </tbody>
-</table>
+    </table>
+}
+else
+{
+    <div class="d-flex justify-content-center align-items-center" style="height: 60vh;">
+        <p class="gold-outline-text" style="font-size: 2rem; font-weight: bold; color: white;">No transactions found</p>
+    </div>
+}
