Implement employee archiving and fix token provider issue for password reset

--- a/Monetrix/Views/AppUser/Index.cshtml
+++ b/Monetrix/Views/AppUser/Index.cshtml
@@ -77,6 +77,13 @@ else
     </div>
 
 }
-<p class="btn-container">
-    <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Employee</a>
-</p>
+
+
+<div class="d-flex justify-content-between">
+    <div class="text-start">
+        <a asp-action="Archive" class="btn btn-bank-create mt-3">Archived Employees</a>
+    </div>
+    <div class="text-end">
+        <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Employee</a>
+    </div>
+</div>
