--- a/Monetrix/Views/PartialViews/_ArchiveAppUserTable.cshtml
+++ b/Monetrix/Views/PartialViews/_ArchiveAppUserTable.cshtml
@@ -44,7 +44,7 @@
                     <td>@ViewBag.Password</td>
                     <td>
                         <a asp-action="Reactivate" asp-route-id="@user.Id" title="Reactivate">
-                            <img src="~/Icons/return.png" alt="Delete" style="width:40px; height:40px;">
+                            <img src="~/Icons/return.png" alt="archived" style="width:40px; height:40px;">
                         </a>
                     </td>
                 </tr>
