--- a/Monetrix/Views/PartialViews/_ArchiveCustomerTable.cshtml
+++ b/Monetrix/Views/PartialViews/_ArchiveCustomerTable.cshtml
@@ -26,23 +26,14 @@
                     <td>@item.Address</td>
                     <td>@item.Phone</td>
                     <td>@item.Gender</td>
-                    <td>
-
-                        <a asp-action="Details" asp-route-id="@item.CustomerId" title="Details">
-                            <img src="~/Icons/research.png" alt="Details" style="width:40px; height:40px;">
-                        </a>
-
-                        @if (User.IsInRole("Admin") || User.IsInRole("CustomerService"))
-                        {
-                            <a asp-action="Edit" asp-route-id="@item.CustomerId" title="Edit">
-                                <img src="~/Icons/user.png" alt="Edit" style="width:40px; height:40px;">
+                    @if (User.IsInRole("Admin") || User.IsInRole("CustomerService"))
+                    {
+                        <td>
+                            <a asp-action="Reactivate" asp-route-id="@item.CustomerId" title="Reactivate">
+                                <img src="~/Icons/return.png" alt="Reactivate" style="width:40px; height:40px;">
                             </a>
-
-                            <a asp-action="Delete" asp-route-id = "@item.CustomerId"  tite="Delete">
-                                <img src="~/Icons/trash.png" alt="Delete" style="width:40px; height:40px;">
-                             </a>
-                        }
-                    </td>
+                        </td>
+                    }
                 </tr>
             }
         </tbody>
@@ -51,17 +42,11 @@
 else
 {
     <div class="d-flex justify-content-center align-items-center" style="height: 60vh;">
-    <p class="gold-outline-text" style="font-size: 2rem; font-weight: bold; color: white;">No customers found</p>
+        <p class="gold-outline-text" style="font-size: 2rem; font-weight: bold; color: white;">No archived customers found</p>
 </div>
 
 }
 
-
-<div class="d-flex justify-content-between">
-    <div class="text-start">
-        <a asp-action="Archive" class="btn btn-bank-create mt-3">Archived Customers</a>
-    </div>
-    <div class="text-end">
-        <a asp-action="Create" class="btn btn-bank-create mt-3">Add New Customer</a>
-    </div>
-</div>
+<p class="btn-container">
+    <a asp-action="Index" class="btn btn-warning mt-3">Back</a>
+</p>
