Refactor reactivation to use UserManager and include Email in AppUser edit form

--- a/Monetrix/Views/AppUser/Edit.cshtml
+++ b/Monetrix/Views/AppUser/Edit.cshtml
@@ -46,6 +46,11 @@
                     </div>
 
                     <div class="col-md-6">
+                        <label asp-for="Email" class="form-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                    </div>
+
+                    <div class="col-md-6">
                         <label asp-for="HireDate" class="form-label"></label>
                         <input asp-for="HireDate" type="date" class="form-control" />
                     </div>
